0219 業務終了後、課題は作ったシーケンス図、クラス図に沿ってpythonでプログラムを作る。

--- a/0219/0219会議メモ.md
+++ b/0219/0219会議メモ.md
@@ -1,5 +1,14 @@
 # PlantUML（前回のシーケンス図続き）
-クラス図とシーケンス図には矛盾を書いていけない。  
+クラス図とシーケンス図には矛盾を書いていけない。（足りない変数など）  
 プログラマーかお客様かで書き方が変わる。（日本語を多用するか否か）
 ユーザーはあるとお客様達に見やすくなる。　　
 型や動きに一番注意しなくてはいけない。  
+
+# Python
+## コンストラクタとデストラクタ  
+コンストラクタとはオブジェクトが生成された時に自動で呼び出される関数のこと。  
+主に変数の初期化などをする。
+
+クラスを他で取り扱うにはimport文が必要。　　
+ def__init__の部分はフィールド　
+コードを綺麗か判断する（ラドン）というものがPythonには存在する。
