一時勉強終了

--- a/m2d26/0226.md
+++ b/m2d26/0226.md
@@ -80,5 +80,18 @@ destroy クラス名:
 
 テスト中はソースコードに手を加えてはならない
 
+## テストコードに書くもの
+変数は整数値なのかを調べる。  
+作ったものの品質を守るためにテストコードを書く。  
+入力したい数値逆を書く。  
+raiseはエラーの場合を表記させるのに必要なので書こう。  
+raiseを使う場合にはpytestをimportしなければならない。  
+isinstanceで型の比較ができる。  
+
+
+## assertとは
+assertとは実行時にそれが満たされていない場合にメッセージや処理の中断をすること。  
+また英語の翻訳では主張をする意味する。
+
 
 
